# forecasting-lab

./: .env.example  .gitattributes  .gitignore  0-README.md  CLAUDE.md  LICENSE  Makefile  ONESHOT_PROMPT.md  PLAN.md  README.md  RESULTS.md  claude-orchestration-plan.md  claude-stack-resources.md  data-automation.md  design.md  learning-investing.md  master-index.md  ml-system-design.md  project-forecasting-lab.md  pyproject.toml  requirements.txt  research-sources.md  signal-monitoring.md
.claude/: settings.json
.claude/hooks/: guard.sh  verify.sh
.github/workflows/: ci.yml  daily.yml  deploy.yml  intraday.yml
.playwright-mcp/: page-2026-07-02T06-58-22-623Z.yml  page-2026-07-02T06-58-50-183Z.yml  page-2026-07-02T07-17-58-916Z.yml  page-2026-07-02T07-18-32-956Z.yml  page-2026-07-02T07-20-16-801Z.yml  page-2026-07-02T07-21-01-055Z.yml  page-2026-07-02T07-52-51-967Z.yml  page-2026-07-02T08-37-32-912Z.yml  page-2026-07-02T08-38-11-423Z.yml
agent-trader/: AUDIT_P8.md  CONSOLIDATED_RESEARCH_PLAN.md  DEEP_DIVE_FINDINGS.md  DEEP_DIVE_FORUMS.md  DEEP_DIVE_GOAL_PROMPT.md  DEEP_DIVE_REPOS.md  LANGALPHA_ANALYSIS.md  MASTER_CONTEXT_PROMPT.md  MASTER_PLAN.md  ONESHOT_PROMPT.md  OPERATOR_RUNBOOK.md  PHASE_P10.md  PHASE_P6b.md  PHASE_P6c.md  PHASE_P6d.md  PHASE_P6e.md  PHASE_P7.md  PHASE_P9.md  PLAN.md  PLATFORM_PLAN.md  ROUND2_GOAL_PROMPT.md  SOURCES_ROUND2_ASSESSMENT.md  VERIFICATION_REPORT.md
config/: config.example.yaml
data/: tier_live.json  watchers.json  watchlist.json
data/ai_opinions/: claude-2026-07-11.json  claude-2026-07-12.json  claude.json
data/arena/: ledger.json
data/regret/: ledger.json
data/verdicts/: 2026-07-05.json  2026-07-11.json  2026-07-12.json  audit.jsonl  contract.json  manifest-2026-07-12.json
design-reference/: AUTHED_CAPTURES.md  FIDELITY_MATRIX.md  SITE_BLUEPRINT.md
examples/: ml_pipeline_demo.py
inputs/: README.md
tests/: test_agent_terminal.py  test_agent_trader_brief.py  test_agent_trader_desk.py  test_agent_trader_execution.py  test_agent_trader_fleet.py  test_agent_trader_gate.py  test_agent_trader_loop.py  test_agent_trader_p6.py  test_agent_trader_team.py  test_alerts.py  test_app_motion.py  test_arena_books.py  test_arena_page.py  test_ask.py  test_backtest.py  test_basketball.py  test_builder_page.py  test_calibration_log.py  test_calibration_resolve.py  test_cli.py  test_cloud_workflow.py  test_compare.py  test_congress.py  test_context_surfaces.py  test_coverage_gates.py  test_cv.py  test_dashboard.py  test_deception.py  test_deflated.py  test_desk_page.py  test_divergence.py  test_edges.py  test_elo.py  test_execution_realism.py  test_factors.py  test_features_labels.py  test_fleet_fdr.py  test_forwardtest.py  test_freshness.py  test_fund_twins.py  (+49 more)
(+160 files in other folders)
